# ATB

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONNECT.md  CONTRIBUTING.md  LICENSE  MILESTONES.md  README.md  balance_report.html  balance_report.length.csv  balance_report.outcomes.csv  balance_report.pairs.csv  balance_report.spells.csv  team_report.comps.csv  team_report.html  team_report.matchups.csv  team_report.roles.csv  team_report.txt
.github/workflows/: ci.yml  release.yml
build-gui/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
builds/: Bruiser.build  Chronomancer.build  Pyromancer.build
data/: catalog.json  creatures.json  rules.json  rules.ranked.json
data/maps/: duel.json
docs/: authTailscale.txt  elements.md  sprite-packs.md  tailscaled.txt  theming.md
lobby-state/: corrgames.json  mailbox.jsonl
packs/: README.md
packs/default/: pack.json
packs/example/: pack.json
packs/example_upscaled_to_96px/: pack.json
scripts/: balance.sh  run_ci_checks.sh  serve.sh  team_balance.sh
src/: main.cpp
src/core/: AI.cpp  AI.h  Battle.cpp  Battle.h  Build.cpp  Build.h  Combat.h  Creatures.cpp  Creatures.h  Entity.h  Evaluator.cpp  Evaluator.h  Event.h  Grid.cpp  Grid.h  Intel.cpp  Intel.h  Match.cpp  Match.h  Ruleset.h  SpellTraits.h  Spells.cpp  Spells.h  Storm.h
src/data/: Base64.h  BuildRepository.cpp  BuildRepository.h  CatalogJson.cpp  CatalogJson.h  CreatureJson.cpp  CreatureJson.h  Json.cpp  Json.h  JsonRead.h  MapJson.cpp  MapJson.h  Net.cpp  Net.h  Password.cpp  Password.h  Prefs.cpp  Prefs.h  RulesetJson.cpp  RulesetJson.h  Sha256.cpp  Sha256.h  SpellEnums.h  SpellJson.cpp  SpellJson.h  schema.sql
src/net/: AccountStore.cpp  AccountStore.h  Arbiter.cpp  Arbiter.h  Correspondence.cpp  Correspondence.h  GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  Lobby.cpp  Lobby.h  MailboxRelay.cpp  MailboxRelay.h  MatchRunner.cpp  MatchRunner.h  MirrorSession.cpp  MirrorSession.h  MoveChannel.h  Protocol.h  Replay.cpp  Replay.h  Socket.cpp  Socket.h  Spectate.cpp  Spectate.h  Subprocess.cpp  Subprocess.h  TailscaleProbe.cpp  TailscaleProbe.h
src/render/: Animator.h  BuildEditorScreen.cpp  BuildEditorScreen.h  ConnectScreen.cpp  ConnectScreen.h  ContentPaths.cpp  ContentPaths.h  CorrespondenceMatchSource.h  DraftScreen.cpp  DraftScreen.h  FlightCheckScreen.cpp  FlightCheckScreen.h  LobbyScreen.cpp  LobbyScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  MatchSource.cpp  MatchSource.h  PackManifest.cpp  PackManifest.h  PatchNotesScreen.cpp  PatchNotesScreen.h  ReadyCheckScreen.cpp  ReadyCheckScreen.h  RemoteMatchSource.h  Renderer.cpp  Renderer.h  ReplayMatchSource.h  SettingsScreen.cpp  SettingsScreen.h  SpectateMatchSource.h  SpritePack.cpp  SpritePack.h  Theme.cpp  Theme.h  Ui.h
tests/: account_demo.cpp  ai_demo.cpp  arbiter_demo.cpp  balance_sim.cpp  brain_arena.cpp  build_demo.cpp  catalog_demo.cpp  chat_demo.cpp  chess_clock_demo.cpp  commit_demo.cpp  correspondence_demo.cpp  creature_demo.cpp  decoy_demo.cpp  determinism_demo.cpp  enums_demo.cpp  event_demo.cpp  headless_demo.cpp  json_demo.cpp  lobby_challenge_demo.cpp  lobby_chat_demo.cpp  lobby_correspondence_demo.cpp  lobby_demo.cpp  lobby_draft_3v3_demo.cpp  lobby_draft_engine_demo.cpp  lobby_draft_finalize_demo.cpp  lobby_draft_pairing_demo.cpp  lobby_forfeit_demo.cpp  lobby_party_demo.cpp  lobby_persist_demo.cpp  lobby_test_util.h  loopback_demo.cpp  mailbox_demo.cpp  map_demo.cpp  matchsource_demo.cpp  net_demo.cpp  net_transport_demo.cpp  pack_demo.cpp  password_demo.cpp  prefs_demo.cpp  queue_demo.cpp  (+16 more)
tests/fixtures/: tailscale_needslogin.json  tailscale_nostate.json  tailscale_running.json
themes/: default.json  gruvbox.json  light.json
tools/: catalog_gen.cpp  creature_gen.cpp  gen_pack.py  lobby_main.cpp  ruleset_gen.cpp  server_main.cpp
web/: shell.html
